realizando tratametos para as requisições
