# dtos/passagemDto.go
@@ -1,11 +1,7 @@
 package dtos
 
-import (
-	"fly/models"
-)
-
 type PassagemDto struct {
 	NumeroAcento uint64
-	Voo          models.Voo
-	Passageiro   models.Passageiro
+	IdVoo        uint64
+	IdPassageiro uint64
 }
