# models/passagem.go
@@ -1,13 +1,11 @@
 package models
 
 type Passagem struct {
-	IdPassagem   uint64 `gorm:"primary_key;column:idPassagem"`
+	IdPassagem   uint64 `gorm:"primary_key;column:idpassagem"`
 	DataCompra   string `gorm:"column:dataCompra"`
 	NumeroAcento uint64 `gorm:"column:numeroAcento"`
-
-	IdVoo uint64 `gorm:"column:idVoo"`
-	Voo   Voo    `gorm:"foreignkey:IdVoo;association_foreignkey:IdVoo"`
-
-	IdPassageiro uint64     `gorm:"column:idPassageiro"`
-	Passageiro   Passageiro `gorm:"foreignkey:IdPassageiro;association_foreignkey:IdPassageiro"`
+	IdVoo        uint64 `gorm:"column:idVoo"`
+	IdPassageiro uint64 `gorm:"column:idPassageiro"`
+	//	Voo   Voo    `gorm:"foreignkey:IdVoo;column:idVoo"`
+	//	Passageiro   Passageiro `gorm:"foreignkey:IdPassageiro;association_foreignkey:IdPassageiro"`
 }
